--- a/FASTPRIME.vcxproj.filters
+++ b/FASTPRIME.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClCompile Include="NaiveSieve.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PureEratosthenesSieve.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PrimeSieve.h">
@@ -38,6 +41,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="NaiveSieve.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PureEratosthenesSieve.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
